<resources>
    <string name="app_name">Calculator</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="decimal">.</string>
    <string name="equals">=</string>
    <string name="plusMinus">+/-</string>
    <string name="fraction">1/x</string>
    <string name="squared">x²</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>
    <string name="delete">⌫</string>
    <string name="percent">%</string>
    <string name="fullClear">C</string>
    <string name="topClear">CE</string>
    <string name="squareRoot">√x</string>

    <string name="displayText">Enter Value</string>
    <string name="historyText"></string>
</resources>