<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.95">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/parButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/par"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/clearButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:text="@string/clear"
                android:background="@drawable/circle"  />

            <Button
                android:id="@+id/deleteButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="2"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:text="@string/delete"
                android:backgroundTint="@android:color/holo_red_dark"
                android:background="@drawable/circle"  />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/percentButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:text="@string/percent"
                android:background="@drawable/circle"  />

            <Button
                android:id="@+id/fractionButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:text="@string/fraction"
                android:background="@drawable/circle"  />

            <Button
                android:id="@+id/exponentButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:text="@string/exponent"
                android:background="@drawable/circle"  />

            <Button
                android:id="@+id/divideButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:text="@string/divide"
                android:background="@drawable/circle"  />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sevenButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:text="@string/seven"
                android:background="@drawable/circle"  />

            <Button
                android:id="@+id/eightButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:text="@string/eight"
                android:background="@drawable/circle"  />

            <Button
                android:id="@+id/nineButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:text="@string/nine"
                android:background="@drawable/circle"  />

            <Button
                android:id="@+id/multiplyButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:text="@string/multiply"
                android:background="@drawable/circle"  />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/fourButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:text="@string/four"
                android:background="@drawable/circle"  />

            <Button
                android:id="@+id/fiveButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:text="@string/five"
                android:background="@drawable/circle"  />

            <Button
                android:id="@+id/sixButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:text="@string/six"
                android:background="@drawable/circle"  />

            <Button
                android:id="@+id/minusButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:text="@string/minus"
                android:background="@drawable/circle"  />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/oneButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:text="@string/one"
                android:background="@drawable/circle"  />

            <Button
                android:id="@+id/twoButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:text="@string/two"
                android:background="@drawable/circle"  />

            <Button
                android:id="@+id/threeButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:text="@string/three"
                android:background="@drawable/circle"  />

            <Button
                android:id="@+id/plusButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:text="@string/plus"
                android:background="@drawable/circle"  />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/plus_minusButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:text="@string/plusMinus"
                android:background="@drawable/circle"  />

            <Button
                android:id="@+id/zeroButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:text="@string/zero"
                android:background="@drawable/circle"  />

            <Button
                android:id="@+id/decimalButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:text="@string/decimal"
                android:background="@drawable/circle"  />

            <Button
                android:id="@+id/equalsButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:text="@string/equals"
                android:background="@drawable/circle"
                android:backgroundTint="#43A047"  />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/display"
        android:inputType="none"
        android:autofillHints="false"
        android:textSize="36sp"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>